<resources>
    <string name="app_name">MplxLauncher</string>

    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <string name="operator" translatable="false">Operator</string>
    <string name="admin" translatable="false">Admin</string>
    <string name="login_error">ERROR: Incorrect Password</string>
    <string name="delete_alert_title">Delete Icon</string>
    <string name="delete_alert_text">Do you really want to delete this item?</string>
    <string name="delete_alert_ok_text">Item successfully deleted</string>
    <string name="addapp_alert_title">Add APP</string>
    <string name="addapp_alert_text">Do you want to add this APP to main screen?</string>
    <string name="addapp_alert_ok_text">APP added to main screen.</string>
    <string name="new_icon">New</string>
    <string name="users_title">Users</string>
    <string name="user_edit_title">User data</string>
    <string name="user_name">Name</string>
    <string name="user_password">Password</string>
    <string name="user_login">Login</string>
    <string name="user_delete">Delete</string>
    <string name="user_save">Save</string>
    <string name="user_check_psw">Admin Confirmation</string>
    <string name="user_current_password">Current Password</string>
    <string name="user_confirm">Confirm</string>
    <string name="user_confirm_password">Retype Password</string>
    <string name="user_cancel">Cancel</string>
    <string name="user_err_empty">Empty field not allowed</string>
    <string name="user_err_psw_len">required 6 character password</string>
    <string name="user_err_psw_match">Password does not match</string>
    <string name="user_err_delete_admin">Impossible delete Admin user</string>
    <string name="user_save_success">User saved</string>
    <string name="user_delete_success">User removed</string>
</resources>
